bk_ida/gccida/c3/print_pattern
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_pattern/src/sched-vis.c:1132:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_pattern/src/sched-vis.c:1234:36: error: use of undeclared identifier 'unk_6E7275'
*( _DWORD *)( buf + 3) = ( _DWORD)&unk_6E7275; 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_pattern/src/obj/sched-vis.o] Error 1
